# nwnx2-linux

./: CMakeLists.txt
include/structs/: CNWSAreaOfEffectObject.h
plugins/: gperf_gen.sh
plugins/lua/: CMakeLists.txt  FunctionHooks.cpp  FunctionHooks.h  NWNXLua.cpp  NWNXLua.h  lua_int.c  lua_native.c
plugins/lua/lib/: area_of_effect.c  engine.h  get_set_script.c  native.h
plugins/lua/nwn/: nwnx_lua.nss
